Update before release

--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -2,7 +2,7 @@
 layout: post_page
 lang: en
 ref: repo
-post_url: mpc
+post_url: copra
 title: Copra
 permalink: en/git-repository/copra
 ---
@@ -144,7 +144,7 @@ copra::LMPC controller(ps);
 controller.solve();
 ```
 
-It is also possible to (re)initialize the system used by the copra.
+It is also possible to (re)initialize the system used by the mpc.
 
 ```c++
 copra::LMPC controller();
@@ -163,7 +163,7 @@ Eigen::VectorXd control = controller.control();
 The library provides several types of constraints.
 All the constraints can be created using step-matrix or whole-matrix.
 We will see that a mixed of the two is also possible.
-They also need to be wrapped in a shared pointer in order to be passed to the copra.
+They also need to be wrapped in a shared pointer in order to be passed to the mpc.
 
 ### Trajectory Constraints
 We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
@@ -181,7 +181,7 @@ auto eqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f, false);
 auto boundTrajConstr = std::make_shared<copra::TrajectoryBoundConstraint>(lower, upper);
 ```
 
-Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In python side, you have to use `float('Inf')`.
+Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In Python side, you have to use `float('Inf')`.
 
 ### Control Constraints
 This is pretty much the same idea as above, there is two type: The control constraint \\(G\mathbf{U} \leq \mathbf{f}\\) or \\(G\mathbf{U} = \mathbf{f}\\)
@@ -222,7 +222,7 @@ controller.addConstraint(ineqControlConstr);
 
 ## Cost functions
 As for constraints, the library provides several types of cost functions.
-All the costs can be created using step-matrix or whole-matrix.
+All the costs (but one) can be created using step-matrix or whole-matrix.
 They also need to be wrapped in a shared pointer in order to be passed to the mpc and may more than one.
 
 ### Target Cost
@@ -261,21 +261,30 @@ The mixed cost minimizes \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
 auto mixedCost = std::make_shared<copra::MixedCost>(M, N, p);
 ```
 
+### Adding and updating a cost function
+All that needs to be done is to make the mpc aware of the costs.
+It will update the costs when its solve function is called.
+
+```c++
+// Adding a target cost
+controller.addCost(targetCost);
+```
+
 ## Cost and constraint specificities
 There are several helper tools for cost functions and constraints.
 
 ### Removal
-There are two ways of deleting a constraint from the copra.
+There are two ways of deleting a constraint/cost from the mpc.
 The main way is to let the mpc handles it.
-In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
-A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
-If you keep a shared pointer of the constraint alive, the constraint remains in the copra.
-Another way is to call the function `removeCost` and `removeConstraint`
+In the `solve()` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
+A constraint/cost is deleted if the user (you) has deleted his shared pointer of the constraint.
+If you keep a shared pointer of the constraint/cost alive, the constraint/cost remains in the mpc.
+Another way is to call the function `removeCost()`/`removeConstraint()`
 
 ### The autoSpan function
-The `autoSpan` function is present in all constraints and cost.
-This method needs to be called if you have created a constraint that mixes step-matrix/vector with whole-matrix/vector.
-For example, if you have a constant step-matrix \\(G\\) and a whole-vector \\(\mathbf{f}\\), 
+The `autoSpan()` function is present in all constraints and cost.
+This method needs to be called if you have created a constraint/cost that mixes step-matrix/vector with whole-matrix/vector.
+For example, if you create a control constraint with a step-matrix \\(G\\) and a whole-vector \\(\mathbf{f}\\), 
 you can pass the two matrices to the constraint and then call the autoSpan function.
 
 ## Changing the QP solver
@@ -312,7 +321,7 @@ controller.useSolver(std::move(solver));
 ## Python users
 Python users can use all the library, the same way as C++ users.
 There are some change though.
-As a shared pointer of constraints and preview system are needed, a specific function has been developed.
+As a shared pointer are needed, specifics functions have been developed for constraints, costs and the system.
 Python users need to call the function with `New` in front.
 For example, `PreviewSystem()` becomes `NewPreviewSystem()`.
 The lib minieigen provides all the tools needed to use Eigen in Python.
@@ -333,15 +342,17 @@ You can voluntary modify the matrices inside the preview system if you have spec
 Don't forget to (re)initialize the mpc if you have changed the dimension of the problem.
 
 ### Give rvalue to the constraints and costs
-Constraints constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
-In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for python users.
+Constraints and costs constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
+In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for Python users.
 
 ### Privilege step-matrix and step-vector
 The library lets you use both step-matrix/vector and whole-matrix/vector.
 When only step-matrix and step-vector are given and because of the sparsity of the problem, the computation will run faster.
-Note that for some constraints (control constraints and bound constraints) a move is perform for whole-matrix/vector. 
 
 Sparse matrix will be used to improve performance in future release.
 
+## Examples
+You find a c++ example [here]({{site.url}}/en/blog/mpc-example-cpp) and a Python example [here]({{site.url}}/en/blog/mpc-example-python)
+
 ## Pymanoid
-[Pymanoid](https://github.com/stephane-caron/pymanoid) is library developed in python by [Stéphane Caron](https://scaron.info/) which allows you to use the model preview controller for motion planning and ele.
+[Pymanoid](https://github.com/stephane-caron/pymanoid) is library developed in Python by [Stéphane Caron](https://scaron.info/) which allows you to use the mpc for motion planning and ele.
