--- a/_posts/repo/fr/2017-04-13-mpc.md
+++ b/_posts/repo/fr/2017-04-13-mpc.md
@@ -2,7 +2,7 @@
 layout: post_page
 lang: fr
 ref: repo
-post_url: mpc
+post_url: copra
 title: Copra
 permalink: fr/git-repository/copra
 ---
@@ -10,10 +10,10 @@ permalink: fr/git-repository/copra
 Cette librairie a été développée pour résoudre le problème du contrôle prédictif. 
 Elle résout des systèmes discrets en utilisant un QP.
 La librairie a été conçue de manière à être performante et facile à utiliser.
-De plus, des bindings python permettent son utilisation dans un environnment python.
+De plus, des bindings Python permettent son utilisation dans un environnment Python.
 
-C'est ma première gosse librairie !
-Dans cet artcile, je vais décrire en quoi un mpc est utile, pourquoi l'utiliser er comment.
+C'est ma première grosse librairie !
+Dans cet artcile, je vais décrire en quoi un mpc est utile, pourquoi l'utiliser et comment.
 <!--more-->
 
 # Un MPC, c'est quoi ?
@@ -25,7 +25,7 @@ De manière plus simple, un mpc est fait pour rechercher une trajectoire qui mè
 
 ## Systèmes continus
 Habituellement, tout commence par un beau système linéaire.
-Comme il est difficile de résoudre le problème analytiquement et rapidement, il faut discrétiser le système qui devient alors résoluble par le mpc.
+Comme il est difficile de résoudre le problème analytiquement et rapidement, il faut discrétiser le système qui devient alors résoluble.
 
 Regardons tout d'abord quels types de système peuvent convenir.
 Tout système de la forme
@@ -40,7 +40,6 @@ $$ \mathbf{s}\_{k+1} = A\mathbf{s}\_k + B\mathbf{u}\_k + \mathbf{d} $$
 où \\(A\\), \\(B\\) et \\(\mathbf{d}\\) sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia](https://en.wikipedia.org/wiki/Discretization)
 
 ## Comment calculer le futur ?
-
 Pour expliquer comment le mpc trouve une solution, il faut d'abord trouver la récurrence des équation ci-dessus.
 Aux premières étapes, on a
 
@@ -120,227 +119,236 @@ La compréhension des matrices ci-dessus est importante car elle permet de mieux
 Son développement a été fait avec les outills de c++14. Hormis la librairie c++ standard, j'ai utilisé [eigen](http://eigen.tuxfamily.org) pour la gestion des matrices.
 Enfin, et pour la suite, on appelle matrice-pas (resp. vecteur-pas) une matrice (resp. un vecteur) de la dimension d'un pas de temps et matrice-total (resp. vecteur-total) une matrice (resp. un vecteur) de la dimension de tous les pas de temps.
 
-## The system
-The system is written in the `PreviewSystem.h` file.
-It defines the whole system and creates the \\(\Phi\\), \\(\Psi\\) and \\(\mathbf{\xi}\\) matrices and vector.
-It is better to create a shared pointer of the instance.
+## Le système
+Le système est géré dans le fichier `PreviewSystem.h`.
+Ce fichier défini la totalité sus sytème and implémente les matrices \\(\Phi\\), \\(\Psi\\) et le vector \\(\mathbf{\xi}\\).
+Il est préférable de créer un shared pointer de l'objet.
 
 ```c++
 auto ps = std::make_shared<copra::PreviewSystem>();
-// Initialize the system
+// Initialise le système
 ps->system(A, B, d, x_0, nrStep);
-// Initialize the system in the constructor
+// Initialise le système dans le constructeur
 auto ps = std::make_shared<copra::PreviewSystem>(A, B, d, x_0, nrStep);
 ```
 
-## The mpc
-The mpc is written in the `LMPC.h` file.
-Creating an instance of an mpc is also fairly easy.
+## Le mpc
+Le mpc est implémenté dans le fichier `LMPC.h`.
+Créer une instance du mpc est simple comme bonjour.
 
 ```c++
 copra::LMPC controller(ps);
-// Build the system and solve the mpc
+// Construit le système et le résout
 controller.solve();
 ```
 
-It is also possible to (re)initialize the system used by the copra.
+Il est possible de (ré)initialiser le système utilisé par le mpc.
 
 ```c++
 copra::LMPC controller();
-// (Re)initialize the mpc with the new system
+// (Ré)initialise le mpc avec un nouveau système
 controller.initializeController(ps);
 ```
 
-To get the results, you just need to call it :)
+Pour récupérer les résultats, vous avez juste besoin de demander :)
 
 ```c++
 Eigen::VectorXd trajectory = controller.trajectory();
 Eigen::VectorXd control = controller.control();
 ```
 
-## The constraints
-The library provides several types of constraints.
-All the constraints can be created using step-matrix or whole-matrix.
-We will see that a mixed of the two is also possible.
-They also need to be wrapped in a shared pointer in order to be passed to the copra.
+## Les contraintes
+La librairie fourni plusieurs types de contrainte.
+Toutes les contraintes peuvent être instanciées en utilisant des matrices-pas et des matrices-total.
+Nous verrons aussi qu'il est possible de faire un mixe des deux.
+Les contraintes ont aussi besoin d'être englobé dans un shared_ptr pour être envoyé dans le mpc
 
-### Trajectory Constraints
-We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
-and the trajectory bound constraint \\(\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}\\).
-Note that the latter can be rewritten to produce the former.
+### Contrainte de trajectoire
+On distingue deux types de contraintes de trajectoire: La contrainte \\(E\mathbf{X} \leq \mathbf{f}\\) ou \\(E\mathbf{X} = \mathbf{f}\\)
+et la contrainte de trajectoire limite \\(\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}\\).
+On peut remarquer qu'il est possible de transformer la seconde pour faire la première.
 
 ```c++
-// Create an inequality constraint
-// E is step-matrix or whole-matrix, f is step-vector or whole-vector.
+// Créer une contrainte d'inégalité
+// E est une matrice-pas ou matrice-total, f est vecteur-pas ou vecteur-total.
 auto ineqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f);
-// Create an equality constraint
+// Créer une contrainte d'égalité
 auto eqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f, false);
-// Create a bound constraint
-// lower and upper are step-vector or whole-vector
+// Créer une contrainte de limite
+// lower et upper sont des vecteurs-pas ou vecteurs-total
 auto boundTrajConstr = std::make_shared<copra::TrajectoryBoundConstraint>(lower, upper);
 ```
 
-Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In python side, you have to use `float('Inf')`.
+Remarque: pour assigner des bornes infinies, il est possible d'inclure la libraire stl `<limits>` et utiliser la fonction `std::numeric_limits<double>::max()`. Côté Python, il faut utiliser la fonction `float('Inf')`.
 
-### Control Constraints
-This is pretty much the same idea as above, there is two type: The control constraint \\(G\mathbf{U} \leq \mathbf{f}\\) or \\(G\mathbf{U} = \mathbf{f}\\)
-and the control bound constraint \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}\\).
+### Contraintes de contrôle
+L'idée est quasiment la même qu'au dessus, il y a deux types: la contrainte de contrôle \\(G\mathbf{U} \leq \mathbf{f}\\) ou \\(G\mathbf{U} = \mathbf{f}\\)
+et la contrainte de contrôle limite \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}\\).
 
 ```c++
-// Create an inequality constraint
-// G is step-matrix or whole-matrix, f is step-vector or whole-vector.
+// Créer une contrainte d'inégalité
+// G est une matrice-pas ou matrice-total, f est vecteur-pas ou vecteur-total.
 auto ineqControlConstr = std::make_shared<copra::ControlConstraint>(E, f);
-// Create an equality constraint
+// Créer une contrainte d'égalité
 auto eqControlConstr = std::make_shared<copra::ControlConstraint>(E, f, false);
-// Create a bound constraint
-// lower and upper are step-vector or whole-vector
+// Créer une contrainte de limite
+// lower et upper sont des vecteurs-pas ou vecteurs-total
 auto boundControlConstr = std::make_shared<copra::ControlBoundConstraint>(lower, upper);
 ```
 
-### Mixed Constraints
-Mixed constraints allow you to add constraints that involve both the trajectory and the control.
-It is written as \\(E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}\\) or \\(E\mathbf{X} + G\mathbf{U} = \mathbf{f}\\).
-As always:
+### Contrainte mixte
+La contrainte mixte vous permet d'ajouter une contrainte mélant trajectoire et contrôle.
+Elle s'écrite \\(E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}\\) ou \\(E\mathbf{X} + G\mathbf{U} = \mathbf{f}\\).
+Comme d'hab':
 
 ```c++
-// Create an inequality constraint
-// E is step-matrix or whole-matrix,  G is step-matrix or whole-matrix, f is step-vector or whole-vector.
+// Créer une contrainte d'inégalité
+// E est une matrice-pas ou matrice-total, G est une matrice-pas ou matrice-total, f est vecteur-pas ou vecteur-total.
 auto ineqMixedConstr = std::make_shared<copra::MixedConstraint>(E, G, f);
-// Create an equality constraint
+// Créer une contrainte d'égalité
 auto eqMixedConstr = std::make_shared<copra::MixedConstraint>(E, G, f, false);
 ```
 
-### Adding and updating a constraint
-All that needs to be done is to make the mpc aware of the constraints.
-It will update the constraints when its solve function is called.
+### Ajout et mis-à-jour des contraintes
+La seule chose à faire et de laisser le mpc prendre connaissance des contraintes.
+Il mettra automatiquement à jour les contraintes au moment de la résolution du problème.
 
 ```c++
-// Adding an inequality control constraint
+// Ajout d'un contrainte de contrôle d'inégalité
 controller.addConstraint(ineqControlConstr);
 ```
 
-## Cost functions
-As for constraints, the library provides several types of cost functions.
-All the costs can be created using step-matrix or whole-matrix.
-They also need to be wrapped in a shared pointer in order to be passed to the mpc and may more than one.
+## Fonction coût
+Comme pour les contraintes, la librairie fourni plusieurs types de fonctions coût.
+Toutes les fonctions coût (sauf une) peuvent être créer en utilisant des matrices-pas ou matrices-total.
+Elles ont aussi besoin d'être englobées dans un shared pointer.
 
-### Target Cost
-The target cost function minimizes \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
-\\(M\\) must be a step-matrix and \\(p\\) must be a step-vector.
+### Coût en valeur finale
+La fonction coût en valeur finale minimise \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
+\\(M\\) doit être une matrice-pas et \\(p\\) doit être un vecteur-pas.
 
 ```c++
-// Create a target cost
+// Créer un coût en valeur finale
 auto targetCost = std::make_shared<copra::TargetCost>(M, p);
 ```
 
-### Trajectory Cost
-The trajectory cost function minimizes \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
+### Coût en trajectoire
+La fonction coût en trajectoire minimise \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
 
 ```c++
-// Create a trajectory cost
-// M is step-matrix or whole-matrix, p is step-vector or whole-vector.
+// Créer un coût en trajcetoire
+// M est une matrice-pas ou matrice-total, p est un vecteur-pas ou vecteur-total.
 auto trajectoryCost = std::make_shared<copra::TrajectoryCost>(M, p);
 ```
 
-### Control Cost
-The control cost minimizes \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
+### Coût en Contrôle
+La fonction coût en contrôle minimise \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
 
 ```c++
-// Create a control cost
-// M is step-matrix or whole-matrix, p is step-vector or whole-vector.
+// Créer un coût en contrôle
+// M est une matrice-pas ou matrice-total, p est un vecteur-pas ou vecteur-total.
 auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
 ```
 
-### Mixed Cost
-The mixed cost minimizes \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
+### Coût mixte
+Le coût mixte minimise \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
 
 ```c++
-// Create a mixed cost
-// M is step-matrix or whole-matrix, N is step-matrix or whole-matrix, p is step-vector or whole-vector.
+// Créer un coût mixte
+// M est une matrice-pas ou matrice-total, N est une matrice-pas ou matrice-total, p est un vecteur-pas ou vecteur-total.
 auto mixedCost = std::make_shared<copra::MixedCost>(M, N, p);
 ```
 
-## Cost and constraint specificities
-There are several helper tools for cost functions and constraints.
-
-### Removal
-There are two ways of deleting a constraint from the copra.
-The main way is to let the mpc handles it.
-In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
-A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
-If you keep a shared pointer of the constraint alive, the constraint remains in the copra.
-Another way is to call the function `removeCost` and `removeConstraint`
-
-### The autoSpan function
-The `autoSpan` function is present in all constraints and cost.
-This method needs to be called if you have created a constraint that mixes step-matrix/vector with whole-matrix/vector.
-For example, if you have a constant step-matrix \\(G\\) and a whole-vector \\(\mathbf{f}\\), 
-you can pass the two matrices to the constraint and then call the autoSpan function.
-
-## Changing the QP solver
-Depending on your compilation state, 4 QP solvers are implemented.
-You can change at anytime the QP to use for solving your problem.
-The current available QP are:
-
- * QuadProg (Default one)
- * QLD
- * Gurobi
- * LSSOL (need commercial license)
-
-To change the QP:
+### Ajout et mis-à-jour des fonctions coût
+La seule chose à faire et de laisser le mpc prendre connaissance des fonctions coût.
+Il mettra automatiquement à jour les coûts au moment de la résolution du problème.
 
 ```c++
-// Create an instance of a mpc with a different QP
+// Ajout d'une fonction coût valeur finale
+controller.addCost(targetCost);
+```
+
+## Spécificité des fonctions coûts et des contraintes
+Il y a plusieurs outils d'aide pour les fonctions coût et les contraintes.
+
+### Suppression
+Il y a deux façons de retirer une contrainte/un coût du mpc.
+Une façon est de laisser faire le mpc.
+Dans sa fonction `solve()`, le mpc vérifie si oui ou non la contrainte/le coût a besoin d'être supprimé(e).
+Une contrainte/un coût est supprimé(e) si l'utilisateur (vous) a détruit son shared pointer de la dite contrainte/le dit coût.
+Si la shared pointer est gardé en vie, la contrainte/le coût reste dans le mpc.
+Une autre possibilité est d'appelée la fonction `removeCost()`/`removeConstraint()`.
+
+### La fonction autoSpan
+La fonction `autoSpan()` est présente dans toutes les contraintes et coûts.
+La méthode doit être appelée si vous avez créé une contrainte/un coût qui mèle des matrices/vecteurs-pas avec des matrices/vecteurs-total.
+Par exemple, si vous construisait une contrainte de contrôle avec une matrice-pas constante \\(G\\) et vecteur-total \\(\mathbf{f}\\), 
+vous pouvez passer ces deux variables dans la contrainte et vous devez ensuite appeler la fonction autoSpan.
+
+## Changer de QP solveur.
+Suivant votre compilation, 4 QP sont implémentés.
+Il est possible de changer de QP n'importe quand.
+À cet instant les QP disponibles sont:
+
+ * QuadProg (Par défaut)
+ * QLD
+ * Gurobi
+ * LSSOL (besoin d'une licence commerciale)
+
+Pour changer de QP:
+
+```c++
+// Créer une instance de QP avec solveur différent
 copra::LMPC controller(copra::SolverFlag::QLD)
-// Change the QP at any time
+// Changer le QP n'importe quand
 controller.selectQPSolver(copra::SolverFlag::GUROBIDense)
 ```
 
-If the default setting of a QP solver is not enough, it is possible to give the controller a user-defined QP.
+Si les options par défaut des solveurs ne sont pas suffisantes, il possible de donner au contrôleur votre propre solveur.
 
 ```c++
-// Create your QP
+// Créer le QP
 std::unique_ptr<Eigen::QLD> solver = solverFactory(copra::SolverFlag::QLD);
-// Make change here
+// Faire les modifications désiéres
 solver->SI_feasibilityTolerance(1e-8);
 // ...
-// Give it to the QP
+// L'envoyer au mpc
 controller.useSolver(std::move(solver));
 ```
 
-## Python users
-Python users can use all the library, the same way as C++ users.
-There are some change though.
-As a shared pointer of constraints and preview system are needed, a specific function has been developed.
-Python users need to call the function with `New` in front.
-For example, `PreviewSystem()` becomes `NewPreviewSystem()`.
-The lib minieigen provides all the tools needed to use Eigen in Python.
+## Utilisateurs Python
+Les utilisateurs Python peuvent utiliser la librairie de la même manière que les utilisateurs c++.
+Il y a quelques différences par contre.
+Comme les shared pointer sont essentiels, des fonctions spécifiques ont été développées pour les contraintes, les coûts et le système.
+Les utilisateurs Python ont besoin d'appeler ces fonctions avec le préfixe `New`.
+Par exemple,`PreviewSystem()` devient `NewPreviewSystem()`.
+La librairie minieigen fourni tous les outils pour utiliser Eigen dans Python.
 
-## Improving performance and building time
-First, you can measure building and solving time of the mpc using `solveTime()` and `solveAndBuildTime()` functions.
-This computes internally the time needed to build the problem and to solve it.
+## Améliorer les performances et les temps de calculs
+Tout d'abord, il est possible de mesurer le temps de résolution et le temps de construction du problème avec les fonctions `solveTime()` et `solveAndBuildTime()`.
 
-### Updating the system yourself
-The initialization of the preview system is just meant to allocate memory for all the needed matrices (\\(\Phi\\), \\(\Psi\\), etc...)
-Normally, when calling the `solve()` function of the mpc, there is no need to do anything else. 
-If those matrices are not updated yet, then they will be built before solving the problem.
-In the case you can (and want to) update the system yourself, you just need to call the `updateSystem()` function of the preview system.
-The `solve()` function will be then faster since it does not have to build the preview system.
+### Mettre à jour le système soi-même
+L'initialisation du système permet l'allocation de mémoire des matrices (\\(\Phi\\), \\(\Psi\\), etc...).
+Normalment, quand la fonction `solve()` du mpc est appelée, le système est mis à jour.
+Dans le cas où vous pouvez (voulez) mettre à jour le système vous-même, vous pouvez juste appeler la fonction `updateSystem()`.
+La fonction `solve()` ne cherchera pas à mettre à jour le système si c'est déjà fait.
 
-Note that you have a full control of the preview system.
-You can voluntary modify the matrices inside the preview system if you have specific matrices.
-Don't forget to (re)initialize the mpc if you have changed the dimension of the problem.
+Remarque, vous avez le contrôle total du système.
+Il est possible de modifier les matrices appartenant au système si vous avez des matrices spécifiques.
+N'oubliez pas de (ré)initialiser le mpc si vous avez modifié la dimension du problème.
 
-### Give rvalue to the constraints and costs
-Constraints constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
-In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for python users.
+### Donner des rvalue aux contraintes et aux coûts
+Les constructeurs des contraintes/des coûts et les fonctions poids utilisent des références universelles pour permettre des move-semantic.
+Ceci n'est pas disponible pour les utilisateurs Python.
 
-### Privilege step-matrix and step-vector
-The library lets you use both step-matrix/vector and whole-matrix/vector.
-When only step-matrix and step-vector are given and because of the sparsity of the problem, the computation will run faster.
-Note that for some constraints (control constraints and bound constraints) a move is perform for whole-matrix/vector. 
+### Privilégier les matrices-pas et les vecteurs-pas
+La libraire vous laisse utilser les matrices-pas/vector et matrices-total/vector.
+Lorsqu'uniquement les matrices-pas et vecteurs-pas sont donné(e)s, et vu que le problème eqt creux, le calcule ira plus vite.
 
-Sparse matrix will be used to improve performance in future release.
+Les matrices creuses seront utilisées pour améliorer les performances pour les release futures
+
+## Examples
+Vous pouvez un exemple c++ [ici]({{site.url}}/fr/blog/mpc-example-cpp) et un exemple python [ici]({{site.url}}/fr/blog/mpc-example-python)
 
 ## Pymanoid
-[Pymanoid](https://github.com/stephane-caron/pymanoid) is library developed in python by [Stéphane Caron](https://scaron.info/) which allows you to use the model preview controller for motion planning and ele.
+[Pymanoid](https://github.com/stephane-caron/pymanoid) est une librairie développée par [Stéphane Caron](https://scaron.info/) qui permet l'utilisation du mpc pour la plannification de trajectoire et autre.
