Use kramdown instead of redcarpet

--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -30,12 +30,12 @@ As it is hard to solve a continuous system fastly, a discretization is done, and
 
 First, let's see what kind of system can work. Any system of the form
 
-$$ \mathbf{\dot{s}} = A\_c\mathbf{s} + B\_c\mathbf{u} + \mathbf{d}\_c $$
+$$ \mathbf{\dot{s}} = A_c\mathbf{s} + B_c\mathbf{u} + \mathbf{d}_c $$
 
 is a candidate. \\(\mathbf{s}\\) is the state vector of the system and \\(\mathbf{u}\\) is the control vector.
 After discretization with a time step \\(T\\), the system becomes:
 
-$$ \mathbf{s}\_{k+1} = A\mathbf{s}\_k + B\mathbf{u}\_k + \mathbf{d} $$
+$$ \mathbf{s}_{k+1} = A\mathbf{s}_k + B\mathbf{u}_k + \mathbf{d} $$
 
 where \\(A\\), \\(B\\) and \\(\mathbf{d}\\) are respectively the state matrix, the control matrix and the bias vector. To understand more about how to get the discretized system, [Wikipedia is your friend](https://en.wikipedia.org/wiki/Discretization)
 
@@ -46,48 +46,48 @@ We need first to perform a recurrence and see what comes out at a step \\(k\\).
 
 $$
 \begin{align}
-    \mathbf{x}\_1 & = A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d} \\\\
-    \mathbf{x}\_2 & = A\mathbf{x}\_1 + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = A(A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d} \\\\
-    \mathbf{x}\_3 & = A\mathbf{x}\_2 + B\mathbf{u}\_2 + \mathbf{d} \\\\
-                  & = A(A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = A^3\mathbf{x}\_0 + [A^2B\ AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1\ \mathbf{u}^T\_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
+    \mathbf{x}_1 & = A\mathbf{x}_0 + B\mathbf{u}_0 + \mathbf{d} \\\\
+    \mathbf{x}_2 & = A\mathbf{x}_1 + B\mathbf{u}_1 + \mathbf{d} \\\\
+                  & = A(A\mathbf{x}_0 + B\mathbf{u}_0 + \mathbf{d}) + B\mathbf{u}_1 + \mathbf{d} \\\\
+                  & = A^2\mathbf{x}_0 + [AB\ B][\mathbf{u}^T_0\ \mathbf{u}^T_1]^T + A\mathbf{d} + \mathbf{d} \\\\
+    \mathbf{x}_3 & = A\mathbf{x}_2 + B\mathbf{u}_2 + \mathbf{d} \\\\
+                  & = A(A^2\mathbf{x}_0 + [AB\ B][\mathbf{u}^T_0\ \mathbf{u}^T_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}_1 + \mathbf{d} \\\\
+                  & = A^3\mathbf{x}_0 + [A^2B\ AB\ B][\mathbf{u}^T_0\ \mathbf{u}^T_1\ \mathbf{u}^T_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
 \end{align}
 $$
 
 It is then easy to show that the recurrence of \\(N\\) steps can be written:
 
-$$ \mathbf{X}\_N = \Phi\mathbf{x}\_0 + \Psi\mathbf{U}\_{N-1} + \mathbf{\xi} $$
+$$ \mathbf{X}_N = \Phi\mathbf{x}_0 + \Psi\mathbf{U}_{N-1} + \mathbf{\xi} $$
 
 where we have
 
 $$
 \Phi = \left[
     \begin{array}{c}
-        I \\\\
-        A \\\\
-        A^2 \\\\
-        \vdots \\\\
+        I \\
+        A \\
+        A^2 \\
+        \vdots \\
         A^N
     \end{array}
     \right],
 \ \Psi = \left[
     \begin{array}{cccc}
-        0        & 0        & \cdots & 0 \\\\
-        B        & 0        & \cdots & 0 \\\\
-        AB       & B        & \ddots & \vdots \\\\
-        \vdots   & \vdots   & \ddots & 0 \\\\
+        0        & 0        & \cdots & 0 \\
+        B        & 0        & \cdots & 0 \\
+        AB       & B        & \ddots & \vdots \\
+        \vdots   & \vdots   & \ddots & 0 \\
         A^{N-1}B & A^{N-2}B & \cdots & B
     \end{array}
     \right],
 \ \mathbf{\xi} = \left[
     \begin{array}{c}
-        \mathbf{0} \\\\
-        \mathbf{d} \\\\
-        A\mathbf{d} + \mathbf{d} \\\\
-        \vdots \\\\
-        \sum\_{i=0}^{N-1} A^{i}\mathbf{d}
+        \mathbf{0} \\
+        \mathbf{d} \\
+        A\mathbf{d} + \mathbf{d} \\
+        \vdots \\
+        \sum_{i=0}^{N-1} A^{i}\mathbf{d}
     \end{array}
     \right]
 $$
@@ -97,23 +97,23 @@ and the whole-state vector \\(\mathbf{X}\\) and whole-control vector \\(\mathbf{
 $$
 \mathbf{X} = \left[
     \begin{array}{c}
-        \mathbf{x}\_0 \\\\
-        \mathbf{x}\_1 \\\\
-        \vdots \\\\
-        \mathbf{x}\_N
+        \mathbf{x}_0 \\
+        \mathbf{x}_1 \\
+        \vdots \\
+        \mathbf{x}_N
     \end{array}
     \right],
 \ \mathbf{U} = \left[
     \begin{array}{c}
-        \mathbf{u}\_0 \\\\
-        \mathbf{u}\_1 \\\\
-        \vdots \\\\
-        \mathbf{u}\_{N-1}
+        \mathbf{u}_0 \\
+        \mathbf{u}_1 \\
+        \vdots \\
+        \mathbf{u}_{N-1}
     \end{array}
     \right].
 $$
 
-Finally, given a desired target/trajectory \\(\mathbf{X}\_T\\) we compute the horizon using a QP solver with a desired cost function.
+Finally, given a desired target/trajectory \\(\mathbf{X}_T\\) we compute the horizon using a QP solver with a desired cost function.
 
 # Let's dive into the library
 The definition of the matrices above is really important to have a proper use of the library.
@@ -292,10 +292,10 @@ Depending on your compilation state, 4 QP solvers are implemented.
 You can change at anytime the QP to use for solving your problem.
 The current available QP are:
 
- * QuadProg (Default one)
- * QLD
- * Gurobi
- * LSSOL (need commercial license)
+* QuadProg (Default one)
+* QLD
+* Gurobi
+* LSSOL (need commercial license)
 
 To change the QP:
 
