--- a/_posts/repo/fr/2017-04-13-mpc.md
+++ b/_posts/repo/fr/2017-04-13-mpc.md
@@ -30,12 +30,12 @@ Comme il est difficile de résoudre le problème analytiquement et rapidement, i
 Regardons tout d'abord quels types de système peuvent convenir.
 Tout système de la forme
 
-$$ \mathbf{\dot{s}} = A\_c\mathbf{s} + B\_c\mathbf{u} + \mathbf{d}\_c $$
+$$ \mathbf{\dot{s}} = A_c\mathbf{s} + B_c\mathbf{u} + \mathbf{d}_c $$
 
 convient. \\(\mathbf{s}\\) est le vecteur d'état du système et \\(\mathbf{u}\\) le vecteur de contrôle.
 Après discrétisation d'un pas de temps \\(T\\), le système devient :
 
-$$ \mathbf{s}\_{k+1} = A\mathbf{s}\_k + B\mathbf{u}\_k + \mathbf{d} $$
+$$ \mathbf{s}_{k+1} = A\mathbf{s}_k + B\mathbf{u}_k + \mathbf{d} $$
 
 où \\(A\\), \\(B\\) et \\(\mathbf{d}\\) sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia](https://en.wikipedia.org/wiki/Discretization)
 
@@ -45,48 +45,48 @@ Aux premières étapes, on a
 
 $$
 \begin{eqnarray}
-    \mathbf{x}\_1 & = & A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d} \\\\
-    \mathbf{x}\_2 & = & A\mathbf{x}\_1 + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = & A(A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = & A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d} \\\\
-    \mathbf{x}\_3 & = & A\mathbf{x}\_2 + B\mathbf{u}\_2 + \mathbf{d} \\\\
-                  & = & A(A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = & A^3\mathbf{x}\_0 + [A^2B\ AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1\ \mathbf{u}^T\_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
+    \mathbf{x}_1 & = & A\mathbf{x}_0 + B\mathbf{u}_0 + \mathbf{d} \\
+    \mathbf{x}_2 & = & A\mathbf{x}_1 + B\mathbf{u}_1 + \mathbf{d} \\
+                  & = & A(A\mathbf{x}_0 + B\mathbf{u}_0 + \mathbf{d}) + B\mathbf{u}_1 + \mathbf{d} \\
+                  & = & A^2\mathbf{x}_0 + [AB\ B][\mathbf{u}^T_0\ \mathbf{u}^T_1]^T + A\mathbf{d} + \mathbf{d} \\
+    \mathbf{x}_3 & = & A\mathbf{x}_2 + B\mathbf{u}_2 + \mathbf{d} \\
+                  & = & A(A^2\mathbf{x}_0 + [AB\ B][\mathbf{u}^T_0\ \mathbf{u}^T_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}_1 + \mathbf{d} \\
+                  & = & A^3\mathbf{x}_0 + [A^2B\ AB\ B][\mathbf{u}^T_0\ \mathbf{u}^T_1\ \mathbf{u}^T_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
 \end{eqnarray}.
 $$
 
 Ainsi, on voit assez facilement (on passera la démonstration ici) qu'à la \\(N\\)-ième étape on a:
 
-$$ \mathbf{X}\_N = \Phi\mathbf{x}\_0 + \Psi\mathbf{U}\_{N-1} + \mathbf{\xi} $$
+$$ \mathbf{X}_N = \Phi\mathbf{x}_0 + \Psi\mathbf{U}_{N-1} + \mathbf{\xi} $$
 
 avec
 
 $$
 \Phi = \left[
     \begin{array}{c}
-        I \\\\
-        A \\\\
-        A^2 \\\\
-        \vdots \\\\
+        I \\
+        A \\
+        A^2 \\
+        \vdots \\
         A^N
     \end{array}
     \right],
 \ \Psi = \left[
     \begin{array}{cccc}
-        0        & 0        & \cdots & 0 \\\\
-        B        & 0        & \cdots & 0 \\\\
-        AB       & B        & \ddots & \vdots \\\\
-        \vdots   & \vdots   & \ddots & 0 \\\\
+        0        & 0        & \cdots & 0 \\
+        B        & 0        & \cdots & 0 \\
+        AB       & B        & \ddots & \vdots \\
+        \vdots   & \vdots   & \ddots & 0 \\
         A^{N-1}B & A^{N-2}B & \cdots & B
     \end{array}
     \right],
 \ \mathbf{\xi} = \left[
     \begin{array}{c}
-        \mathbf{0} \\\\
-        \mathbf{d} \\\\
-        A\mathbf{d} + \mathbf{d} \\\\
-        \vdots \\\\
-        \sum\_{i=0}^{N-1} A^{i}\mathbf{d}
+        \mathbf{0} \\
+        \mathbf{d} \\
+        A\mathbf{d} + \mathbf{d} \\
+        \vdots \\
+        \sum_{i=0}^{N-1} A^{i}\mathbf{d}
     \end{array}
     \right]
 $$
@@ -96,23 +96,23 @@ et le vecteur d'état total \\(\mathbf{X}\\) et le vecteur de contrôle total \\
 $$
 \mathbf{X} = \left[
     \begin{array}{c}
-        \mathbf{x}\_0 \\\\
-        \mathbf{x}\_1 \\\\
-        \vdots \\\\
-        \mathbf{x}\_N
+        \mathbf{x}_0 \\
+        \mathbf{x}_1 \\
+        \vdots \\
+        \mathbf{x}_N
     \end{array}
     \right],
 \ \mathbf{U} = \left[
     \begin{array}{c}
-        \mathbf{u}\_0 \\\\
-        \mathbf{u}\_1 \\\\
-        \vdots \\\\
-        \mathbf{u}\_{N-1}
+        \mathbf{u}_0 \\
+        \mathbf{u}_1 \\
+        \vdots \\
+        \mathbf{u}_{N-1}
     \end{array}
     \right].
 $$
 
-Finalement, considérant une valeur désirée/une trajectoire désirée \\(\mathbf{X}\_T\\) on calcule sur l'horizon de temps choisi et considérant une fonction de coût.
+Finalement, considérant une valeur désirée/une trajectoire désirée \\(\mathbf{X}_T\\) on calcule sur l'horizon de temps choisi et considérant une fonction de coût.
 
 # La librairie de plus près
 La compréhension des matrices ci-dessus est importante car elle permet de mieux cerner le fonctionnement de la librairie.
