noting math with $

--- a/_posts/repo/fr/2017-04-13-mpc.md
+++ b/_posts/repo/fr/2017-04-13-mpc.md
@@ -32,12 +32,12 @@ Tout système de la forme
 
 $$ \mathbf{\dot{s}} = A_c\mathbf{s} + B_c\mathbf{u} + \mathbf{d}_c $$
 
-convient. \\(\mathbf{s}\\) est le vecteur d'état du système et \\(\mathbf{u}\\) le vecteur de contrôle.
-Après discrétisation d'un pas de temps \\(T\\), le système devient :
+convient. $\mathbf{s}$ est le vecteur d'état du système et $\mathbf{u}$ le vecteur de contrôle.
+Après discrétisation d'un pas de temps $T$, le système devient :
 
 $$ \mathbf{s}_{k+1} = A\mathbf{s}_k + B\mathbf{u}_k + \mathbf{d} $$
 
-où \\(A\\), \\(B\\) et \\(\mathbf{d}\\) sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia](https://en.wikipedia.org/wiki/Discretization)
+où $A$, $B$ et $\mathbf{d}$ sont respectivement la matrice d'état, la matrice de contrôle et le biais. Pour comprendre comment discrétiser son système [rien de mieux qu'une page Wikipédia](https://en.wikipedia.org/wiki/Discretization)
 
 ## Comment calculer le futur ?
 Pour expliquer comment le mpc trouve une solution, il faut d'abord trouver la récurrence des équation ci-dessus.
@@ -55,7 +55,7 @@ $$
 \end{eqnarray}.
 $$
 
-Ainsi, on voit assez facilement (on passera la démonstration ici) qu'à la \\(N\\)-ième étape on a:
+Ainsi, on voit assez facilement (on passera la démonstration ici) qu'à la $N$-ième étape on a:
 
 $$ \mathbf{X}_N = \Phi\mathbf{x}_0 + \Psi\mathbf{U}_{N-1} + \mathbf{\xi} $$
 
@@ -91,7 +91,7 @@ $$
     \right]
 $$
 
-et le vecteur d'état total \\(\mathbf{X}\\) et le vecteur de contrôle total \\(\mathbf{U}\\) sont
+et le vecteur d'état total $\mathbf{X}$ et le vecteur de contrôle total $\mathbf{U}$ sont
 
 $$
 \mathbf{X} = \left[
@@ -112,7 +112,7 @@ $$
     \right].
 $$
 
-Finalement, considérant une valeur désirée/une trajectoire désirée \\(\mathbf{X}_T\\) on calcule sur l'horizon de temps choisi et considérant une fonction de coût.
+Finalement, considérant une valeur désirée/une trajectoire désirée $\mathbf{X}_T$ on calcule sur l'horizon de temps choisi et considérant une fonction de coût.
 
 # La librairie de plus près
 La compréhension des matrices ci-dessus est importante car elle permet de mieux cerner le fonctionnement de la librairie.
@@ -121,7 +121,7 @@ Enfin, et pour la suite, on appelle matrice-pas (resp. vecteur-pas) une matrice 
 
 ## Le système
 Le système est géré dans le fichier `PreviewSystem.h`.
-Ce fichier défini la totalité sus sytème and implémente les matrices \\(\Phi\\), \\(\Psi\\) et le vector \\(\mathbf{\xi}\\).
+Ce fichier défini la totalité sus sytème and implémente les matrices $\Phi$, $\Psi$ et le vector $\mathbf{\xi}$.
 Il est préférable de créer un shared pointer de l'objet.
 
 ```c++
@@ -164,8 +164,8 @@ Nous verrons aussi qu'il est possible de faire un mixe des deux.
 Les contraintes ont aussi besoin d'être englobé dans un shared_ptr pour être envoyé dans le mpc
 
 ### Contrainte de trajectoire
-On distingue deux types de contraintes de trajectoire: La contrainte \\(E\mathbf{X} \leq \mathbf{f}\\) ou \\(E\mathbf{X} = \mathbf{f}\\)
-et la contrainte de trajectoire limite \\(\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}\\).
+On distingue deux types de contraintes de trajectoire: La contrainte $E\mathbf{X} \leq \mathbf{f}$ ou $E\mathbf{X} = \mathbf{f}$
+et la contrainte de trajectoire limite $\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}$.
 On peut remarquer qu'il est possible de transformer la seconde pour faire la première.
 
 ```c++
@@ -182,8 +182,8 @@ auto boundTrajConstr = std::make_shared<copra::TrajectoryBoundConstraint>(lower,
 Remarque: pour assigner des bornes infinies, il est possible d'inclure la libraire stl `<limits>` et utiliser la fonction `std::numeric_limits<double>::max()`. Côté Python, il faut utiliser la fonction `float('Inf')`.
 
 ### Contraintes de contrôle
-L'idée est quasiment la même qu'au dessus, il y a deux types: la contrainte de contrôle \\(G\mathbf{U} \leq \mathbf{f}\\) ou \\(G\mathbf{U} = \mathbf{f}\\)
-et la contrainte de contrôle limite \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}\\).
+L'idée est quasiment la même qu'au dessus, il y a deux types: la contrainte de contrôle $G\mathbf{U} \leq \mathbf{f}$ ou $G\mathbf{U} = \mathbf{f}$
+et la contrainte de contrôle limite $\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}$.
 
 ```c++
 // Créer une contrainte d'inégalité
@@ -198,7 +198,7 @@ auto boundControlConstr = std::make_shared<copra::ControlBoundConstraint>(lower,
 
 ### Contrainte mixte
 La contrainte mixte vous permet d'ajouter une contrainte mélant trajectoire et contrôle.
-Elle s'écrite \\(E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}\\) ou \\(E\mathbf{X} + G\mathbf{U} = \mathbf{f}\\).
+Elle s'écrite $E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}$ ou $E\mathbf{X} + G\mathbf{U} = \mathbf{f}$.
 Comme d'hab':
 
 ```c++
@@ -224,8 +224,8 @@ Toutes les fonctions coût (sauf une) peuvent être créer en utilisant des matr
 Elles ont aussi besoin d'être englobées dans un shared pointer.
 
 ### Coût en valeur finale
-La fonction coût en valeur finale minimise \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
-\\(M\\) doit être une matrice-pas et \\(p\\) doit être un vecteur-pas.
+La fonction coût en valeur finale minimise $\|\|M\mathbf{x}_N + \mathbf{p}\|\|$.
+$M$ doit être une matrice-pas et $p$ doit être un vecteur-pas.
 
 ```c++
 // Créer un coût en valeur finale
@@ -233,7 +233,7 @@ auto targetCost = std::make_shared<copra::TargetCost>(M, p);
 ```
 
 ### Coût en trajectoire
-La fonction coût en trajectoire minimise \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
+La fonction coût en trajectoire minimise $\|\|M\mathbf{X} + \mathbf{p}\|\|$.
 
 ```c++
 // Créer un coût en trajcetoire
@@ -242,7 +242,7 @@ auto trajectoryCost = std::make_shared<copra::TrajectoryCost>(M, p);
 ```
 
 ### Coût en Contrôle
-La fonction coût en contrôle minimise \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
+La fonction coût en contrôle minimise $\|\|N\mathbf{U} + \mathbf{p}\|\|$.
 
 ```c++
 // Créer un coût en contrôle
@@ -251,7 +251,7 @@ auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
 ```
 
 ### Coût mixte
-Le coût mixte minimise \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
+Le coût mixte minimise $\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|$.
 
 ```c++
 // Créer un coût mixte
@@ -282,7 +282,7 @@ Une autre possibilité est d'appelée la fonction `removeCost()`/`removeConstrai
 ### La fonction autoSpan
 La fonction `autoSpan()` est présente dans toutes les contraintes et coûts.
 La méthode doit être appelée si vous avez créé une contrainte/un coût qui mèle des matrices/vecteurs-pas avec des matrices/vecteurs-total.
-Par exemple, si vous construisait une contrainte de contrôle avec une matrice-pas constante \\(G\\) et vecteur-total \\(\mathbf{f}\\), 
+Par exemple, si vous construisait une contrainte de contrôle avec une matrice-pas constante $G$ et vecteur-total $\mathbf{f}$, 
 vous pouvez passer ces deux variables dans la contrainte et vous devez ensuite appeler la fonction autoSpan.
 
 ## Changer de QP solveur.
@@ -328,7 +328,7 @@ La librairie minieigen fourni tous les outils pour utiliser Eigen dans Python.
 Tout d'abord, il est possible de mesurer le temps de résolution et le temps de construction du problème avec les fonctions `solveTime()` et `solveAndBuildTime()`.
 
 ### Mettre à jour le système soi-même
-L'initialisation du système permet l'allocation de mémoire des matrices (\\(\Phi\\), \\(\Psi\\), etc...).
+L'initialisation du système permet l'allocation de mémoire des matrices ($\Phi$, $\Psi$, etc...).
 Normalment, quand la fonction `solve()` du mpc est appelée, le système est mis à jour.
 Dans le cas où vous pouvez (voulez) mettre à jour le système vous-même, vous pouvez juste appeler la fonction `updateSystem()`.
 La fonction `solve()` ne cherchera pas à mettre à jour le système si c'est déjà fait.
