--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -32,17 +32,17 @@ First, let's see what kind of system can work. Any system of the form
 
 $$ \mathbf{\dot{s}} = A_c\mathbf{s} + B_c\mathbf{u} + \mathbf{d}_c $$
 
-is a candidate. \\(\mathbf{s}\\) is the state vector of the system and \\(\mathbf{u}\\) is the control vector.
-After discretization with a time step \\(T\\), the system becomes:
+is a candidate. $\mathbf{s}$ is the state vector of the system and $\mathbf{u}$ is the control vector.
+After discretization with a time step $T$, the system becomes:
 
 $$ \mathbf{s}_{k+1} = A\mathbf{s}_k + B\mathbf{u}_k + \mathbf{d} $$
 
-where \\(A\\), \\(B\\) and \\(\mathbf{d}\\) are respectively the state matrix, the control matrix and the bias vector. To understand more about how to get the discretized system, [Wikipedia is your friend](https://en.wikipedia.org/wiki/Discretization)
+where $A$, $B$ and $\mathbf{d}$ are respectively the state matrix, the control matrix and the bias vector. To understand more about how to get the discretized system, [Wikipedia is your friend](https://en.wikipedia.org/wiki/Discretization)
 
 ## How the horizon is computed
 
 To show how the MPC finds out the solution, we need to develop the equation above.
-We need first to perform a recurrence and see what comes out at a step \\(k\\).
+We need first to perform a recurrence and see what comes out at a step $k$.
 
 $$
 \begin{align}
@@ -56,7 +56,7 @@ $$
 \end{align}
 $$
 
-It is then easy to show that the recurrence of \\(N\\) steps can be written:
+It is then easy to show that the recurrence of $N$ steps can be written:
 
 $$ \mathbf{X}_N = \Phi\mathbf{x}_0 + \Psi\mathbf{U}_{N-1} + \mathbf{\xi} $$
 
@@ -92,7 +92,7 @@ $$
     \right]
 $$
 
-and the whole-state vector \\(\mathbf{X}\\) and whole-control vector \\(\mathbf{U}\\) are
+and the whole-state vector $\mathbf{X}$ and whole-control vector $\mathbf{U}$ are
 
 $$
 \mathbf{X} = \left[
@@ -113,17 +113,17 @@ $$
     \right].
 $$
 
-Finally, given a desired target/trajectory \\(\mathbf{X}_T\\) we compute the horizon using a QP solver with a desired cost function.
+Finally, given a desired target/trajectory $\mathbf{X}_T$ we compute the horizon using a QP solver with a desired cost function.
 
 # Let's dive into the library
 The definition of the matrices above is really important to have a proper use of the library.
 The library has been developed using c++14 tools and it uses [eigen matrix library](http://eigen.tuxfamily.org) internally.
-Later, i will call step-matrix (resp. step-vector), a matrix (resp. vector) that has the dimension of one step (same dimension as \\(\mathbf{x}_k\\))
-and whole-matrix (resp. whole-vector), a matrix (resp. vector) that has the full dimension (same dimension as \\(\mathbf{X}\\)).
+Later, i will call step-matrix (resp. step-vector), a matrix (resp. vector) that has the dimension of one step (same dimension as $\mathbf{x}_k$)
+and whole-matrix (resp. whole-vector), a matrix (resp. vector) that has the full dimension (same dimension as $\mathbf{X}$ ).
 
 ## The system
 The system is written in the `PreviewSystem.h` file.
-It defines the whole system and creates the \\(\Phi\\), \\(\Psi\\) and \\(\mathbf{\xi}\\) matrices and vector.
+It defines the whole system and creates the $\Phi$, $\Psi$ and $\mathbf{\xi}$ matrices and vector.
 It is better to create a shared pointer of the instance.
 
 ```c++
@@ -166,8 +166,8 @@ We will see that a mixed of the two is also possible.
 They also need to be wrapped in a shared pointer in order to be passed to the mpc.
 
 ### Trajectory Constraints
-We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
-and the trajectory bound constraint \\(\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}\\).
+We distinguish two types of trajectory constraints: The trajectory constraint $E\mathbf{X} \leq \mathbf{f}$ or $E\mathbf{X} = \mathbf{f}$
+and the trajectory bound constraint $\underline{\mathbf{X}} \leq \mathbf{X} \leq \overline{\mathbf{X}}$.
 Note that the latter can be rewritten to produce the former.
 
 ```c++
@@ -184,8 +184,8 @@ auto boundTrajConstr = std::make_shared<copra::TrajectoryBoundConstraint>(lower,
 Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In Python side, you have to use `float('Inf')`.
 
 ### Control Constraints
-This is pretty much the same idea as above, there is two type: The control constraint \\(G\mathbf{U} \leq \mathbf{f}\\) or \\(G\mathbf{U} = \mathbf{f}\\)
-and the control bound constraint \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}\\).
+This is pretty much the same idea as above, there is two type: The control constraint $G\mathbf{U} \leq \mathbf{f}$ or $G\mathbf{U} = \mathbf{f}$
+and the control bound constraint $\underline{\mathbf{U}} \leq \mathbf{U} \leq \overline{\mathbf{U}}$.
 
 ```c++
 // Create an inequality constraint
@@ -200,7 +200,7 @@ auto boundControlConstr = std::make_shared<copra::ControlBoundConstraint>(lower,
 
 ### Mixed Constraints
 Mixed constraints allow you to add constraints that involve both the trajectory and the control.
-It is written as \\(E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}\\) or \\(E\mathbf{X} + G\mathbf{U} = \mathbf{f}\\).
+It is written as $E\mathbf{X} + G\mathbf{U} \leq \mathbf{f}$ or $E\mathbf{X} + G\mathbf{U} = \mathbf{f}$.
 As always:
 
 ```c++
@@ -226,8 +226,8 @@ All the costs (but one) can be created using step-matrix or whole-matrix.
 They also need to be wrapped in a shared pointer in order to be passed to the mpc and may more than one.
 
 ### Target Cost
-The target cost function minimizes \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
-\\(M\\) must be a step-matrix and \\(p\\) must be a step-vector.
+The target cost function minimizes $\|\|M\mathbf{x}_N + \mathbf{p}\|\|$.
+$M$ must be a step-matrix and $p$ must be a step-vector.
 
 ```c++
 // Create a target cost
@@ -235,7 +235,7 @@ auto targetCost = std::make_shared<copra::TargetCost>(M, p);
 ```
 
 ### Trajectory Cost
-The trajectory cost function minimizes \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
+The trajectory cost function minimizes $\|\|M\mathbf{X} + \mathbf{p}\|\|$.
 
 ```c++
 // Create a trajectory cost
@@ -244,7 +244,7 @@ auto trajectoryCost = std::make_shared<copra::TrajectoryCost>(M, p);
 ```
 
 ### Control Cost
-The control cost minimizes \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
+The control cost minimizes $\|\|N\mathbf{U} + \mathbf{p}\|\|$.
 
 ```c++
 // Create a control cost
@@ -253,7 +253,7 @@ auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
 ```
 
 ### Mixed Cost
-The mixed cost minimizes \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
+The mixed cost minimizes $\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|$.
 
 ```c++
 // Create a mixed cost
@@ -284,7 +284,7 @@ Another way is to call the function `removeCost()`/`removeConstraint()`
 ### The autoSpan function
 The `autoSpan()` function is present in all constraints and cost.
 This method needs to be called if you have created a constraint/cost that mixes step-matrix/vector with whole-matrix/vector.
-For example, if you create a control constraint with a step-matrix \\(G\\) and a whole-vector \\(\mathbf{f}\\), 
+For example, if you create a control constraint with a step-matrix $G$ and a whole-vector $\mathbf{f}$, 
 you can pass the two matrices to the constraint and then call the autoSpan function.
 
 ## Changing the QP solver
@@ -331,7 +331,7 @@ First, you can measure building and solving time of the mpc using `solveTime()` 
 This computes internally the time needed to build the problem and to solve it.
 
 ### Updating the system yourself
-The initialization of the preview system is just meant to allocate memory for all the needed matrices (\\(\Phi\\), \\(\Psi\\), etc...)
+The initialization of the preview system is just meant to allocate memory for all the needed matrices ($\Phi$, $\Psi$, etc...)
 Normally, when calling the `solve()` function of the mpc, there is no need to do anything else. 
 If those matrices are not updated yet, then they will be built before solving the problem.
 In the case you can (and want to) update the system yourself, you just need to call the `updateSystem()` function of the preview system.
