--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -32,10 +32,12 @@ First, let's see what kind of system can work. Any system of the form
 
 $$ \mathbf{\dot{s}} = A_c\mathbf{s} + B_c\mathbf{u} + \mathbf{d}_c $$
 
-is a candidate. \$$ \mathbf{s} $$ is the state vector of the system and \$$ \mathbf{u} $$ is the control vector.
-After discretization with a time step \$$ T $$, the system becomes:
+is a candidate. $$ \mathbf{s} $$ is the state vector of the system and $$ \mathbf{u} $$ is the control vector.
+After discretization with a time step $$ T $$, the system becomes:
 
-$$ \mathbf{s}_{k+1} = A\mathbf{s}_k + B\mathbf{u}_k + \mathbf{d} $$
+$$ 
+\mathbf{s}_{k+1} = A\mathbf{s}_k + B\mathbf{u}_k + \mathbf{d} 
+$$
 
 where $A$, $B$ and $\mathbf{d}$ are respectively the state matrix, the control matrix and the bias vector. To understand more about how to get the discretized system, [Wikipedia is your friend](https://en.wikipedia.org/wiki/Discretization)
 
