--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -33,6 +33,8 @@ $$
 \$\$
 test
 \$\$
+
+,\\(test\\)
 As it is hard to solve a continuous system fastly, a discretization is done, and this system can be solved by the MPC.
 
 First, let's see what kind of system can work. Any system of the form
