Correction of some mistakes

--- a/_posts/repo/en/2017-04-13-copra.md
+++ b/_posts/repo/en/2017-04-13-copra.md
@@ -4,7 +4,7 @@ lang: en
 ref: repo
 post_url: copra
 title: Copra
-permalink: en/git-repository/copra
+permalink: en/git-repositories/copra
 ---
 
 This is library has been developed to answer to the model preview control problem.
