--- a/_posts/repo/fr/2017-04-13-copra.md
+++ b/_posts/repo/fr/2017-04-13-copra.md
@@ -4,7 +4,7 @@ lang: fr
 ref: repo
 post_url: copra
 title: Copra
-permalink: fr/git-repository/copra
+permalink: fr/git-repositories/copra
 ---
 
 Cette librairie a été développée pour résoudre le problème du contrôle prédictif. 
