Update copra doc

--- a/_posts/repo/en/2017-04-13-copra.md
+++ b/_posts/repo/en/2017-04-13-copra.md
@@ -294,7 +294,7 @@ The current available QP are:
 
 * QuadProg (Default one)
 * QLD
-* Gurobi
+* Gurobi (need license)
 * LSSOL (need commercial license)
 
 To change the QP:
@@ -321,10 +321,11 @@ controller.useSolver(std::move(solver));
 ## Python users
 Python users can use all the library, the same way as C++ users.
 There are some change though.
-As a shared pointer are needed, specifics functions have been developed for constraints, costs and the system.
-Python users need to call the function with `New` in front.
-For example, `PreviewSystem()` becomes `NewPreviewSystem()`.
-The lib minieigen provides all the tools needed to use Eigen in Python.
+To feed C++ functions Eigen types, converters have been created using [pygen-convert](https://github.com/vsamy/pygen-converter). 
+This allows the user to provide functions either numpy arrays or python lists.
+You need to be careful that the python type are `float` (which is also a `float64` in Numpy).
+For example, `[1, 2, 3]` is a list of `int` and `[1., 2., 3.]` is a list of `float`.
+Finally, to respect the PEP8 norm, functions have been rewritten in [lower case with words separated by underscores](https://www.python.org/dev/peps/pep-0008/#function-names).
 
 ## Improving performance and building time
 First, you can measure building and solving time of the mpc using `solveTime()` and `solveAndBuildTime()` functions.
