--- a/_posts/repo/fr/2017-04-13-copra.md
+++ b/_posts/repo/fr/2017-04-13-copra.md
@@ -292,7 +292,7 @@ Il est possible de changer de QP n'importe quand.
 
  * QuadProg (Par défaut)
  * QLD
- * Gurobi
+ * Gurobi (besoin d'une licence)
  * LSSOL (besoin d'une licence commerciale)
 
 Pour changer de QP:
@@ -319,10 +319,11 @@ controller.useSolver(std::move(solver));
 ## Utilisateurs Python
 Les utilisateurs Python peuvent utiliser la librairie de la même manière que les utilisateurs c++.
 Il y a quelques différences par contre.
-Comme les shared pointer sont essentiels, des fonctions spécifiques ont été développées pour les contraintes, les coûts et le système.
-Les utilisateurs Python ont besoin d'appeler ces fonctions avec le préfixe `New`.
-Par exemple,`PreviewSystem()` devient `NewPreviewSystem()`.
-La librairie minieigen fourni tous les outils pour utiliser Eigen dans Python.
+Pour passer des arguments du type de Eigen aux fonctions, des convertisseurs ont été créés avec [pygen-convert](https://github.com/vsamy/pygen-converter). 
+Cela permet à l'utilisateur d'exploiter directement les numpy array ou des listes Python.
+Il faut cependant s'assurer que le type de l'objet Python est bien du `float` (qui est aussi du `float64` dans numpy).
+Par exemple, `[1, 2, 3]` est une liste de `int` et `[1., 2., 3.]` est une liste de  `float`.
+Enfin, pour respecter la norme PEP8, les fonctions ont été renommées en [miniscule avec underscores comme séparateur](https://www.python.org/dev/peps/pep-0008/#function-names).
 
 ## Améliorer les performances et les temps de calculs
 Tout d'abord, il est possible de mesurer le temps de résolution et le temps de construction du problème avec les fonctions `solveTime()` et `solveAndBuildTime()`.
@@ -342,8 +343,8 @@ Les constructeurs des contraintes/des coûts et les fonctions poids utilisent de
 Ceci n'est pas disponible pour les utilisateurs Python.
 
 ### Privilégier les matrices-pas et les vecteurs-pas
-La libraire vous laisse utilser les matrices-pas/vector et matrices-total/vector.
-Lorsqu'uniquement les matrices-pas et vecteurs-pas sont donné(e)s, et vu que le problème eqt creux, le calcule ira plus vite.
+La libraire vous laisse utilser les matrices-pas/vector-pas et matrices-total/vector-total.
+Lorsqu'uniquement les matrices-pas et vecteurs-pas sont donné(e)s, et vu que le problème est creux, le calcule ira plus vite.
 
 Les matrices creuses seront utilisées pour améliorer les performances pour les release futures
 
