Update and fix equations pb.

--- a/_posts/repo/en/2017-04-13-copra.md
+++ b/_posts/repo/en/2017-04-13-copra.md
@@ -253,7 +253,7 @@ auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
 ```
 
 ### Mixed Cost
-The mixed cost minimizes $\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|$.
+The mixed cost minimizes $\|\|M\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|$.
 
 ```c++
 // Create a mixed cost
@@ -296,6 +296,7 @@ The current available QP are:
 * QLD
 * Gurobi (need license)
 * LSSOL (need commercial license)
+* OSQP
 
 To change the QP:
 
