--- a/_posts/repo/fr/2017-04-13-copra.md
+++ b/_posts/repo/fr/2017-04-13-copra.md
@@ -251,7 +251,7 @@ auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
 ```
 
 ### Coût mixte
-Le coût mixte minimise $\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|$.
+Le coût mixte minimise $\|\|M\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|$.
 
 ```c++
 // Créer un coût mixte
@@ -294,6 +294,7 @@ Il est possible de changer de QP n'importe quand.
  * QLD
  * Gurobi (besoin d'une licence)
  * LSSOL (besoin d'une licence commerciale)
+ * OSQP
 
 Pour changer de QP:
 
